exports[`FormStep should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
        },
        Object {
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Test Test Title
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      I am a child.
    </Text>
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#f77040",
                "borderWidth": 1,
              },
              Array [
                Object {
                  "marginLeft": 0,
                  "marginRight": 0,
                },
                Object {
                  "marginRight": 16,
                  "width": 58,
                },
              ],
              undefined,
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#f77040",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }>
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 24,
                    "width": 24,
                  },
                  Object {},
                ]
              } />
          </Text>
        </View>
      </TouchableNativeFeedback>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#f77040",
                "borderWidth": 1,
              },
              Array [
                Object {
                  "marginLeft": 0,
                  "marginRight": 0,
                },
                Object {
                  "flex": 1,
                },
              ],
              undefined,
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#f77040",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }>
            NEXT
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
  </View>
</View>
`;

exports[`FormStep should support disabling its back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
        },
        Object {
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Test Test Title
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      I am a child.
    </Text>
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1,
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              Object {
                "marginRight": 16,
                "width": 58,
              },
            ],
            undefined,
            Array [
              Object {
                "borderColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#f77040",
                },
                undefined,
                Array [
                  Object {
                    "color": "#dfe5e6",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </Text>
      </View>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#f77040",
                "borderWidth": 1,
              },
              Array [
                Object {
                  "marginLeft": 0,
                  "marginRight": 0,
                },
                Object {
                  "flex": 1,
                },
              ],
              undefined,
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#f77040",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }>
            NEXT
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
  </View>
</View>
`;
